kube/tyrion.yaml
apiVersion: v1
kind: Service
metadata:
  name: tyrion
spec:
  ports:
  - port: 80
    targetPort: 9000
  selector:
    app: tyrion
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tyrion
spec:
  selector:
    matchLabels:
      app: tyrion
  replicas: 1
  template:
    metadata:
      labels:
        app: tyrion
    spec:
      containers:
      - name: tyrion
        image: byzancedocker/tyrion:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: byzancesecret
